# runwayLaneDetection

./: .flake8  .pre-commit-config.yaml  DEVELOPMENT.md  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml
configs/: config_sample.yml
lane_detection_medium/: __init__.py  cvat_parser.py  evaluation.py  inference.py  metrics.py  path.py
lane_detection_medium/datasets/: file_datasets.py
lane_detection_medium/types/: base_types.py  box_types.py  detection_types.py
lane_detection_medium/utils/: convert.py  fs.py  geometry.py  hash.py  load.py  video_processing.py  viz.py
lane_detection_medium/yolov5-7.0/: benchmarks.py  detect.py  hubconf.py  train.py  tutorial.ipynb
lane_detection_medium/yolov5-7.0/.github/workflows/: greetings.yml
lane_detection_medium/yolov5-7.0/classify/: train.py  tutorial.ipynb  val.py
lane_detection_medium/yolov5-7.0/models/: common.py  experimental.py  tf.py  yolo.py
lane_detection_medium/yolov5-7.0/segment/: predict.py  val.py
lane_detection_medium/yolov5-7.0/utils/: __init__.py  augmentations.py  dataloaders.py  general.py  metrics.py  plots.py  torch_utils.py
lane_detection_medium/yolov5-7.0/utils/loggers/clearml/: clearml_utils.py
lane_detection_medium/yolov5-7.0/utils/loggers/comet/: __init__.py
lane_detection_medium/yolov5-7.0/utils/loggers/wandb/: wandb_utils.py
lane_detection_medium/yolov5-7.0/utils/segment/: dataloaders.py  plots.py
notebooks/: 00_inference.ipynb  01_evaluation.ipynb  02_dataset_parser.ipynb  03_bg_frames.ipynb  04_eda.ipynb  05_compare_models.ipynb
runway_lane_detection/: __init__.py  evaluation.py  inference.py  metrics.py
runway_lane_detection/datasets/: file_datasets.py
runway_lane_detection/types/: image_types.py
runway_lane_detection/utils/: convert.py  fs.py  geometry.py  hash.py  load.py
runway_lane_detection/yolov5-7.0/: .gitignore  export.py  val.py
runway_lane_detection/yolov5-7.0/classify/: predict.py
runway_lane_detection/yolov5-7.0/models/: common.py
runway_lane_detection/yolov5-7.0/segment/: train.py  tutorial.ipynb
runway_lane_detection/yolov5-7.0/utils/: autoanchor.py  autobatch.py  dataloaders.py  downloads.py  general.py  loss.py  triton.py
runway_lane_detection/yolov5-7.0/utils/loggers/: __init__.py
runway_lane_detection/yolov5-7.0/utils/loggers/wandb/: log_dataset.py
runway_lane_detection/yolov5-7.0/utils/segment/: general.py
scripts/: config_sample.py  remove_zebra.py  sandbox.py
